--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>카카오페이 홈</title>
+    <title>VoiceBank 홈</title>
     <meta name="viewport" content="width=400, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="home.css">
 </head>
@@ -206,6 +206,7 @@
     <button class="voice-btn" id="voice-btn" title="음성 질문">
         <span class="voice-icon">&#127908;</span>
     </button>
+    <div id="status-message" class="status-message" aria-live="polite"></div>
     <script src="home.js"></script>
 </body>
 
